spec/e2e/field/get_on_function.lit
fn foo {}

foo.bar; # error: [line 3] Only instances have properties.
